<resources>
    <string name="app_name">Overcooked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="new_here_sign_up"><u>New here? Sign up!</u></string>
    <string name="welcome_back_sign_in"><u>Welcome back! Sign in</u></string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="overcooked">Overcooked</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="new_post">New Post</string>
    <string name="display_name">Display Name</string>
    <string name="storage_posts">post_thumbnails/</string>
    <string name="storage_users">user_thumbnails/</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>
</resources>